# c-python

./: CMakeLists.txt  callback  callback.c  compile.sh  myFunc.py  setup.py  spam.c
wrapping_c_lib_ctypes/: compile_mandelbrot.sh  mandelbrot.c  mandelbrot.py
